--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,47 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules/
+backend/__pycache__/
+backend/venv/
+backend/*.pyc
+backend/*.log
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Environment files
+.env
+.env.local
+.env.production
+backend/env.local
 
-# testing
-/coverage
+# Build outputs
+dist/
+build/
 
-# next.js
-/.next/
-/out/
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
 
-# production
-/build
-
-# misc
+# OS files
 .DS_Store
-*.pem
+Thumbs.db
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+# Logs
+*.log
+logs/
 
-# env files (can opt-in for committing if needed)
-.env*
+# Temporary files
+*.tmp
+*.temp
 
-# vercel
-.vercel
+# Test files
+test-*.html
+demo.html
+demo-preview.html
 
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+# ngrok
+ngrok.yml.backup
+
+# Local development
+local-server.py
+proxy-server.py
+serve-build.py
