Use python3 throughout deployment configs (railway.json, nixpacks, build.sh) to fix runtime 'python: command not found'

--- a/.nixpacks/nixpacks.toml
+++ b/.nixpacks/nixpacks.toml
@@ -14,8 +14,8 @@ cmds = [
 [phases.build]
 cmds = [
   "npm run build",
-  "cd backend && python -c 'from database import engine; from models_updated import Base; Base.metadata.create_all(bind=engine)'"
+  "cd backend && python3 -c 'from database import engine; from models_updated import Base; Base.metadata.create_all(bind=engine)'
 ]
 
 [start]
-cmd = "cd backend && python main.py"
+cmd = "cd backend && python3 main.py"
