--- a/.github/workflows/build-and-push-images.yml
+++ b/.github/workflows/build-and-push-images.yml
@@ -28,6 +28,14 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Log in to Docker Hub (optional)
+        if: secrets.DOCKERHUB_USERNAME && secrets.DOCKERHUB_TOKEN
+        uses: docker/login-action@v2
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build and push backend image
         uses: docker/build-push-action@v4
         with:
@@ -36,6 +44,18 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/quality_rounds-backend:latest
             ghcr.io/${{ github.repository_owner }}/quality_rounds-backend:${{ github.sha }}
+          platforms: linux/amd64,linux/arm64
+      
+      - name: Also push backend to Docker Hub (optional)
+        if: secrets.DOCKERHUB_USERNAME && secrets.DOCKERHUB_TOKEN
+        uses: docker/build-push-action@v4
+        with:
+          context: ./backend
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/quality_rounds-backend:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/quality_rounds-backend:${{ github.sha }}
+          platforms: linux/amd64,linux/arm64
 
       - name: Build and push frontend image
         uses: docker/build-push-action@v4
@@ -46,6 +66,19 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository_owner }}/quality_rounds-frontend:latest
             ghcr.io/${{ github.repository_owner }}/quality_rounds-frontend:${{ github.sha }}
+          platforms: linux/amd64,linux/arm64
+
+      - name: Also push frontend to Docker Hub (optional)
+        if: secrets.DOCKERHUB_USERNAME && secrets.DOCKERHUB_TOKEN
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/quality_rounds-frontend:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/quality_rounds-frontend:${{ github.sha }}
+          platforms: linux/amd64,linux/arm64
 
       - name: Set outputs
         run: |
