--- a/backend/env.neon
+++ b/backend/env.neon
@@ -1,6 +1,6 @@
 # Database Configuration for Neon
 # Using your Neon database endpoint
-DATABASE_URL=postgresql://neondb_owner:npg_ERS5fHwxWiu2@ep-lingering-morning-adejreab-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+DATABASE_URL=postgresql://neondb_owner:npg_1OjEJeUiVgA9@ep-blue-frog-ad8dlt4y-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 
 # Security
 SECRET_KEY=your-super-secret-key-here-for-neon-production
