--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: salamah
+      POSTGRES_DB: salamaty_db
     ports:
       - "5432:5432"
     volumes:
